# hexlet-flask-example

./: .gitignore  Makefile  example.py  pyproject.toml
static/: castomers.css  customers_mobile.css  login.css  login_mobile.css  new_castomer.css  new_customer.css  new_customer_mobile.css  show_castomer.css  show_customer_mobile.css  show_mobile.css  style.css  update_castomer.css
templates/users/: customers_mobile.html  customers_row_mobile.html  delete.html  index.html  layout_for_row.html  login.html  login_mobile.html  logins.json  new.html  new1.html  new_customer_mobile.html  new_mobile.html  post.html  post_mobile.html  show.html  show_customer_mobile.html  show_mobile.html  update.html  update1.html  update_customer_mobile.html  users.json
